Refactoring, major improvement of communication between renderer and hdk, displaying images in MPlay

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -18,7 +18,8 @@ add_library( ${library_name} SHARED
     Core/Renderer.cpp
     Core/WhittedRayTracer/WhittedRayTracer.cpp
     Core/Utility/SampleGenerators.cpp
-    HoudiniHook/RenderView.cpp
+    Interface/RenderView.cpp
+    Interface/RendererInterface.cpp
     HoudiniHook/DebugNode.cpp
     HoudiniHook/Hook.cpp
     HoudiniHook/RendererNode.cpp
