Major refactoring WIP

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -14,16 +14,20 @@ set( library_name HoudiniPathTracer )
 #Todo: Break the project into multiple libraries to avoid linking problems
 
 add_library( ${library_name} SHARED
-        oldCore/SceneComponents/Camera.cpp
-#    oldCore/oldRenderer.cpp
-        oldCore/RenderEngine.cpp
-        oldCore/SceneComponents/Light.cpp
-        oldCore/BRDF/old_PrincipledShader.cpp
-        oldCore/WhittedRayTracer/WhittedRayTracer.cpp
-        oldCore/Utility/SampleGenerators.cpp
-        oldCore/Utility/Math.cpp
-    Interface/RenderView.cpp
-    Interface/RendererInterface.cpp
+#        oldCore/SceneComponents/Camera.cpp
+##    oldCore/oldRenderer.cpp
+#        oldCore/RenderEngine.cpp
+#        oldCore/SceneComponents/Light.cpp
+#        oldCore/BRDF/old_PrincipledShader.cpp
+#        oldCore/WhittedRayTracer/WhittedRayTracer.cpp
+#        oldCore/Utility/SampleGenerators.cpp
+#        oldCore/Utility/Math.cpp
+    Core/Renderers/Sources/Utility.cpp
+    Core/Physics/Headers/Quantities.hpp
+    Interface/Sources/RenderInterface.cpp
+    Interface/Sources/RenderWindow.cpp
+#        Interface/Sources/oldRenderView.cpp
+#        Interface/Sources/oldRendererInterface.cpp
     HoudiniHook/Utility.cpp
     HoudiniHook/LightNode.cpp
     HoudiniHook/CameraNode.cpp
