--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required( VERSION 3.6 )
 
 project( NPRG045 )
 
-set( HFS $ENV{HFS} )
-set( CMAKE_PREFIX_PATH $ENV{CMAKE_PREFIX_PATH} )
+
+set(HFS /Applications/Houdini/Houdini19.5.353/Frameworks/Houdini.framework/Versions/Current/Resources)
+set(CMAKE_PREFIX_PATH /Applications/Houdini/Houdini19.5.353/Frameworks/Houdini.framework/Versions/Current/Resources/toolkit/cmake)
+#set( HFS $ENV{HFS} )
+#set( CMAKE_PREFIX_PATH $ENV{CMAKE_PREFIX_PATH} )
 
 list( APPEND CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH}" )
 
@@ -17,15 +20,22 @@ add_library( ${library_name} SHARED
     Core/Mathematics/Sources/Sampling.cpp
     Core/Mathematics/Sources/Coordinates.cpp
     Core/Physics/Sources/GeometricalOptics.cpp
-    Core/Physics/Sources/Quantities.cpp
-    Core/Renderers/Sources/DistributedRaytracer.cpp
-    Core/Renderers/Sources/Renderer.cpp
-    Core/Renderers/Sources/Utility.cpp
+    Core/Physics/Sources
+
+        #    Core/Physics/Sources/OldQuantities.cpp
+
+#    Core/Renderers/Sources/OldDistributedRaytracer.cpp
+#    Core/Renderers/Sources/OldPathTracer.cpp
+#    Core/Renderers/Sources/OldRenderer.cpp
+    Core/Renderers/Sources/ImageRepresentation.cpp
+    Core/Renderers/Sources/PhysicallyBasedRenderer.cpp
+
+
     Core/Scene/Sources/Camera.cpp
     Core/Scene/Sources/Geometry.cpp
     Core/Scene/Sources/Light.cpp
     Core/Scene/Sources/Scene.cpp
-    Core/Materials/Sources/LambertBRDF.cpp
+#    Core/Materials/Sources/LambertBRDF.cpp
 
     Interface/Sources/RenderInterface.cpp
     Interface/Sources/RenderWindow.cpp
