--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -3,16 +3,16 @@ cmake_minimum_required( VERSION 3.6 )
 project( NPRG045 )
 
 
+# IDE might not be able to load the CMake project without those variables set!
 set(HFS /Applications/Houdini/Houdini19.5.353/Frameworks/Houdini.framework/Versions/Current/Resources)
 set(CMAKE_PREFIX_PATH /Applications/Houdini/Houdini19.5.353/Frameworks/Houdini.framework/Versions/Current/Resources/toolkit/cmake)
-#set( HFS $ENV{HFS} )
-#set( CMAKE_PREFIX_PATH $ENV{CMAKE_PREFIX_PATH} )
 
 list( APPEND CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH}" )
 
 find_package( Houdini REQUIRED )
 
 set( library_name HoudiniPathTracer )
+
 
 add_library( ${library_name} SHARED
     Core/Mathematics/sources/Sampling.cpp
@@ -47,5 +47,7 @@ target_link_libraries( ${library_name} Houdini )
 target_include_directories( ${library_name} PRIVATE
         ${CMAKE_CURRENT_BINARY_DIR}
 )
+
+set_property(TARGET HoudiniPathTracer PROPERTY CXX_STANDARD 17)
 
 houdini_configure_target( ${library_name} )
